add drawer and fonts

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,7 +74,7 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+  fonts:
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
@@ -85,6 +85,12 @@ flutter:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
+      - family: JetBrainsMono
+        fonts:
+          - asset: assets/fonts/JetBrainsMono-Regular.ttf
+          - asset: assets/fonts/JetBrainsMono-Bold.ttf
+          - asset: assets/fonts/JetBrainsMono-Italic.ttf
+          - asset: assets/fonts/JetBrainsMono-BoldItalic.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
