--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  syncfusion_flutter_sliders: ^26.2.4
 
 
   # The following adds the Cupertino Icons font to your application.
