--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   syncfusion_flutter_sliders: ^26.2.4
+  cart_stepper: ^4.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
