--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   syncfusion_flutter_sliders: ^26.2.4
   cart_stepper: ^4.3.0
+  auto_size_text: ^3.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
